# workshop

./: .env.example  .gitignore  IMPLEMENTATION_COMPLETE.md  README_FIXES.md  REFACTOR_PLAN.md  app.py  audit_report.md  backend_implementation_guide.md  database.json  main.py  pyproject.toml  render.yaml  requirements.txt  verify_db_audit.py
api/: index.py
config/: settings.py
core/config/: settings.py
core/database/: models.py
core/middleware/: auth.py  rate_limiter.py  security.py
core/services/: challenge_engine.py  processing_controller.py  report_generator.py  scoring_engine.py  security_engine.py  test_engine.py
data/: db.json
frontend/static/: test-interface.html
frontend/templates/: admin.html  admin_logs.html  (+5 more)
middleware/: auth.py  rate_limiter.py  security.py
models/: database.py  database_v3.py
routes/: __init__.py  admin.py  auth.py  challenge.py  dashboard.py  leaderboard.py  test_management.py  test_session.py
scratch/: render_debug.py  test_admin_endpoints.py
services/: achievement_engine.py  processing_controller.py  question_bank.py  report_generator.py  scoring_engine.py  security_engine.py  test_engine.py
static/: test-interface.html
templates/: admin.html  admin_analytics.html  admin_candidates.html  admin_login.html  admin_logs.html  admin_security.html  admin_settings.html  admin_test_create.html  admin_test_list.html  admin_test_manage.html  base.html  challenge.html  dashboard.html  index.html  landing.html  leaderboard.html  login.html  profile.html  report.html  signup.html  student_test_list.html  test_session.html
(+27 files in other folders)
