[project]
name = "workshop-portal"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0,<4.0",
    "pymongo>=4.6,<5.0",
    "dnspython>=2.4,<3.0",
    "werkzeug>=3.0,<4.0",
    "gunicorn>=21.2.0,<22.0.0",
    "waitress>=3.0.0,<4.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "flask-cors>=4.0.0"
]

[tool.vercel]
entrypoint = "app:app"